--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,17 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
   pool: 5
+  username: root
+  password: root
+  socket: /var/run/mysqld/mysqld.sock
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: blogruby
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
