--- a/config/database.yml
+++ b/config/database.yml
@@ -26,5 +26,7 @@ test:
 
 production:
   <<: *default
-  database: blogruby
+  database: ENV['CLEARDB_URL']
+  username: ENV['CLEARDB_DATABASE_USERNAME']
+  password: ENV['CLEARDB_DATABASE_PASSWORDs']
   
