--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,11 @@
 #
 default: &default
   adapter: mysql2
+  encoding: utf8
   pool: 5
+  username: root
+  password: root
+  socket: /var/run/mysqld/mysqld.sock
   timeout: 5000
 
 development:
@@ -22,5 +26,5 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: db/production.blogruby
   
