--- a/config/database.yml
+++ b/config/database.yml
@@ -5,17 +5,13 @@
 #   gem 'sqlite3'
 #
 default: &default
-  # adapter: mysql2
-  # encoding: utf8
-  # pool: 5
-  # username: root
-  # password: root
-  # socket: /var/run/mysqld/mysqld.sock
-  # timeout: 5000
-
-  adapter: postgresql
+  adapter: mysql2
   encoding: utf8
   pool: 5
+  username: root
+  password: root
+  socket: /var/run/mysqld/mysqld.sock
+  timeout: 5000
 
 development:
   <<: *default
